# event_handler

./: .env  .gitignore  .pre-commit-config.yaml  AUTHORS  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
api/: openapi.json
event_handler/: __init__.py  cli.py  logger.py  main.py
event_handler/api/: config.py  events.py  users.py
event_handler/db/: interface.py  postgresql.py  sqlite.py
event_handler/models/: event.py  user.py
event_handler/repositories/: event_repo.py  user_repo.py
tests/db/: conftest.py  test_sqlite.py
tests/repositories/: conftest.py  test_event_repo.py  test_user_repo.py
